--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Example - Beautiful UI/UX</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
+            /* Telegram theme colors */
+            --tg-theme-bg-color: #1E2022;
+            --tg-theme-text-color: #FFFFFF;
+            --tg-theme-hint-color: #888888;
+            --tg-theme-link-color: #0088cc;
+            --tg-theme-button-color: #0088cc;
+            --tg-theme-button-text-color: #FFFFFF;
+
             font-family: Arial, sans-serif;
             background-color: var(--tg-theme-bg-color);
+            color: var(--tg-theme-text-color);
             margin: 0;
             padding: 0;
             display: flex;
@@ -19,9 +29,9 @@
         .container {
             width: 90%;
             max-width: 400px;
-            background-color: var(--tg-theme-bg-color);
+            background-color: #ffffff;
             border-radius: 10px;
-            box-shadow: 0 2px 8px var(--tg-theme-button-color);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
             padding: 30px;
             text-align: center;
         }
@@ -29,7 +39,7 @@
         .form-header {
             font-size: 24px;
             font-weight: bold;
-            color: var(--tg-theme-button-color);
+            color: #007bff;
             margin-bottom: 20px;
         }
 
@@ -43,12 +53,12 @@
             font-size: 14px;
             font-weight: bold;
             margin-bottom: 5px;
-            color: var(--tg-theme-text-color);
+            color: #333333;
         }
 
         .form-control {
             width: 100%;
-            border: 1px solid var(--tg-theme-button-color);
+            border: 1px solid #dddddd;
             border-radius: 5px;
             padding: 10px;
             font-size: 14px;
@@ -65,7 +75,7 @@
         }
 
         .select-item {
-            background-color: var(--tg-theme-bg-color);
+            background-color: #f5f5f5;
             padding: 5px 10px;
             border-radius: 5px;
             cursor: pointer;
@@ -73,13 +83,13 @@
         }
 
         .select-item.selected {
-            background-color: var(--tg-theme-button-color);
-            color: var(--tg-theme-text-color);
+            background-color: #007bff;
+            color: #fff;
         }
 
         .submit-btn {
-            background-color: var(--tg-theme-button-color);
-            color: var(--tg-theme-text-color);
+            background-color: #007bff;
+            color: #fff;
             border: none;
             border-radius: 5px;
             padding: 12px 24px;
@@ -89,7 +99,7 @@
         }
 
         .submit-btn:hover {
-            background-color: var(--tg-theme-button-color);
+            background-color: #0056b3;
         }
 
         @media (max-width: 600px) {
