--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
-            /* Telegram theme colors */
-            --tg-theme-bg-color: #1E2022;
-            --tg-theme-text-color: #FFFFFF;
-            --tg-theme-hint-color: #888888;
-            --tg-theme-link-color: #0088cc;
-            --tg-theme-button-color: #0088cc;
-            --tg-theme-button-text-color: #FFFFFF;
-
             font-family: Arial, sans-serif;
             background-color: var(--tg-theme-bg-color);
             color: var(--tg-theme-text-color);
@@ -27,33 +19,25 @@
         }
 
         .container {
-            width: 90%;
-            max-width: 400px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            text-align: center;
+            /* Set background color for the container */
+            background-color: var(--tg-theme-bg-color);
         }
 
-        .form-header {
-            font-size: 24px;
-            font-weight: bold;
-            color: #007bff;
-            margin-bottom: 20px;
+        /* Set text color for labels and hints */
+        .form-label,
+        .form-hint {
+            color: var(--tg-theme-text-color);
         }
 
-        .form-group {
-            text-align: left;
-            margin-bottom: 20px;
+        /* Set link color */
+        .form-link {
+            color: var(--tg-theme-link-color);
         }
 
-        .form-label {
-            display: block;
-            font-size: 14px;
-            font-weight: bold;
-            margin-bottom: 5px;
-            color: #333333;
+        /* Set background and text color for buttons */
+        .submit-btn {
+            background-color: var(--tg-theme-button-color);
+            color: var(--tg-theme-button-text-color);
         }
 
         .form-control {
@@ -62,10 +46,26 @@
             border-radius: 5px;
             padding: 10px;
             font-size: 14px;
+            background-color: #ffffff;
+            color: #333333;
         }
 
-        .select-container {
-            position: relative;
+        .select-container .form-control {
+            /* Apply the same styles as other form controls for consistency */
+            background-color: var(--tg-theme-bg-color);
+            color: var(--tg-theme-text-color);
+        }
+
+        .form-header {
+            font-size: 24px;
+            font-weight: bold;
+            color: var(--tg-theme-link-color);
+            margin-bottom: 20px;
+        }
+
+        .form-group {
+            text-align: left;
+            margin-bottom: 20px;
         }
 
         .select-multiple {
@@ -75,31 +75,17 @@
         }
 
         .select-item {
-            background-color: #f5f5f5;
+            background-color: var(--tg-theme-bg-color);
             padding: 5px 10px;
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
+            color: var(--tg-theme-text-color);
         }
 
         .select-item.selected {
-            background-color: #007bff;
-            color: #fff;
-        }
-
-        .submit-btn {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            padding: 12px 24px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.2s ease;
-        }
-
-        .submit-btn:hover {
-            background-color: #0056b3;
+            background-color: var(--tg-theme-button-color);
+            color: var(--tg-theme-button-text-color);
         }
 
         @media (max-width: 600px) {
