--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Example - Beautiful UI/UX</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: var(--tg-theme-bg-color);
-            color: var(--tg-theme-text-color);
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
             display: flex;
@@ -19,25 +17,33 @@
         }
 
         .container {
-            /* Set background color for the container */
-            background-color: var(--tg-theme-bg-color);
+            width: 90%;
+            max-width: 400px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            text-align: center;
         }
 
-        /* Set text color for labels and hints */
-        .form-label,
-        .form-hint {
-            color: var(--tg-theme-text-color);
+        .form-header {
+            font-size: 24px;
+            font-weight: bold;
+            color: #007bff;
+            margin-bottom: 20px;
         }
 
-        /* Set link color */
-        .form-link {
-            color: var(--tg-theme-link-color);
+        .form-group {
+            text-align: left;
+            margin-bottom: 20px;
         }
 
-        /* Set background and text color for buttons */
-        .submit-btn {
-            background-color: var(--tg-theme-button-color);
-            color: var(--tg-theme-button-text-color);
+        .form-label {
+            display: block;
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 5px;
+            color: #333333;
         }
 
         .form-control {
@@ -46,26 +52,10 @@
             border-radius: 5px;
             padding: 10px;
             font-size: 14px;
-            background-color: #ffffff;
-            color: #333333;
         }
 
-        .select-container .form-control {
-            /* Apply the same styles as other form controls for consistency */
-            background-color: var(--tg-theme-bg-color);
-            color: var(--tg-theme-text-color);
-        }
-
-        .form-header {
-            font-size: 24px;
-            font-weight: bold;
-            color: var(--tg-theme-link-color);
-            margin-bottom: 20px;
-        }
-
-        .form-group {
-            text-align: left;
-            margin-bottom: 20px;
+        .select-container {
+            position: relative;
         }
 
         .select-multiple {
@@ -75,17 +65,31 @@
         }
 
         .select-item {
-            background-color: var(--tg-theme-bg-color);
+            background-color: #f5f5f5;
             padding: 5px 10px;
             border-radius: 5px;
             cursor: pointer;
             font-size: 14px;
-            color: var(--tg-theme-text-color);
         }
 
         .select-item.selected {
-            background-color: var(--tg-theme-button-color);
-            color: var(--tg-theme-button-text-color);
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        .submit-btn {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 12px 24px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.2s ease;
+        }
+
+        .submit-btn:hover {
+            background-color: #0056b3;
         }
 
         @media (max-width: 600px) {
