--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             overflow: hidden; /* Запрещаем прокрутку страницы */
             flex-direction: column;
             align-items: center;
-            overflow-y: scroll;
+/*             overflow-y: scroll; */
         }
 /* секция главного меню */
         /* блок главного меню */
