--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <!-- Python code -->
     <py-script>
-        from js import tg, user_info
+        from js import user_info
         print(f"User data = {user_info}")
 
     </py-script>
