--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
 
     <!-- Javascript code -->
     <script>
-        let tg = window.Telegram.WebApp;
-        let user_info = tg.initData 
+        tg = window.Telegram.WebApp;
+        user_info = tg.initDataUnsafe.user.id;
 
     </script>
     
     <!-- Python code -->
     <py-script>
-        from js import user_info
+        from js import tg, user_info
         print(f"User data = {user_info}")
 
     </py-script>
   </body>
 </html>
-
 
 
 
