--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Javascript code -->
     <script>
         tg = window.Telegram.WebApp;
-        user_info = tg.initDataUnsafe.user.id;
+        user_info = tg.initDataUnsafe;
 
     </script>
     
@@ -30,8 +30,6 @@
     </py-script>
   </body>
 </html>
-
-
 
 
 
