--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Python code -->
     <py-script>
         from js import tg, user_info
-        print(f"User data = {user_info}")
+        print(f"User data = {user_info[0]}")
 
     </py-script>
   </body>
