--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <!-- Javascript code -->
     <script>
         tg = window.Telegram.WebApp;
-        user_info = tg.initDataUnsafe;
+        user_info = tg.initDataUnsafe.user;
 
     </script>
     
     <!-- Python code -->
     <py-script>
         from js import tg, user_info
-        print(f"User data = {user_info[0]}")
+        print(f"User data = {user_info}")
 
     </py-script>
   </body>
