--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Javascript code -->
     <script>
         tg = window.Telegram.WebApp;
-        user_info = tg.initDataUnsafe.user;
+        user_info = tg.initDataUnsafe.user.id;
 
     </script>
     
