--- a/index.html
+++ b/index.html
@@ -24,11 +24,6 @@
                 <span class="text-xs dark:text-gray-400">4 hours ago</span>
             </div>
         </div>
-        <div>
-            <img src="https://source.unsplash.com/random/100x100/?5" alt="" class="object-cover w-full mb-4 h-60 sm:h-96 dark:bg-gray-500">
-            <h2 class="mb-1 text-xl font-semibold">Nam cu platonem posidonium sanctus debitis te</h2>
-            <p class="text-sm dark:text-gray-400">Eu qualisque aliquando mel, id lorem detraxit nec, ad elit minimum pri. Illum ipsum detracto ne cum. Mundi nemore te ius, vim ad illud atqui apeirian...</p>
-        </div>
         <div class="flex flex-wrap justify-between">
             <div class="space-x-2">
                 <button aria-label="Share this post" type="button" class="p-2 text-center">
@@ -63,7 +58,7 @@
     <!-- Javascript code -->
     <script>
         tg = window.Telegram.WebApp;
-        user_info = tg.initDataUnsafe.user;
+        user_info = tg.initDataUnsafe.user.id;
 
     </script>
     
@@ -75,6 +70,8 @@
     </py-script>
   </body>
 </html>
+
+
 
 
 
