--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <!-- Javascript code -->
     <script>
-        tg = window.Telegram.WebApp;
-        user_info = tg.initDataUnsafe.user.id;
+        const tg = window.Telegram.WebApp;
+        const user_info = tg.initDataUnsafe.user.id;
 
     </script>
     
@@ -31,7 +31,6 @@
     </py-script>
   </body>
 </html>
-
 
 
 
