--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
   </head>
 
@@ -18,8 +18,8 @@
 
     <!-- Javascript code -->
     <script>
-        const tg = window.Telegram.WebApp;
-        const user_info = tg.initDataUnsafe.user.id;
+        tg = window.Telegram.WebApp;
+        user_info = tg.initDataUnsafe.user.id;
 
     </script>
     
@@ -31,7 +31,5 @@
     </py-script>
   </body>
 </html>
-
-
 
 
