--- a/index.html
+++ b/index.html
@@ -17,19 +17,18 @@
     <!-- Site body -->
 
     <!-- Javascript code -->
-    <script>
+    <!-- <script>
         tg = window.Telegram.WebApp;
         user_info = tg.initDataUnsafe.user.id;
 
     </script>
-    
+     -->
     <!-- Python code -->
     <py-script>
-        from js import tg, user_info
-        print(f"User data = {user_info}")
+        <!-- from js import tg, user_info
+        print(f"User data = {user_info}") -->
+        print(f"User data")
 
     </py-script>
   </body>
 </html>
-
-
