--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <!-- Site body -->
-
+    <h1>hi</h1>
     <!-- Javascript code -->
     <!-- <script>
         tg = window.Telegram.WebApp;
@@ -27,7 +27,7 @@
     <py-script>
         <!-- from js import tg, user_info
         print(f"User data = {user_info}") -->
-        print(f"User data")
+        print("User data")
 
     </py-script>
   </body>
