--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
   </head>
 
@@ -27,7 +27,10 @@
     <py-script>
         <!-- from js import tg, user_info
         print(f"User data = {user_info}") -->
-        print("User data")
+        ls = 10
+
+        print(f"User data {ls}")
+
 
     </py-script>
   </body>
