--- a/index.html
+++ b/index.html
@@ -17,21 +17,16 @@
     <!-- Site body -->
     <h1>hi</h1>
     <!-- Javascript code -->
-    <!-- <script>
+    <script>
         tg = window.Telegram.WebApp;
         user_info = tg.initDataUnsafe.user.id;
 
     </script>
-     -->
+    
     <!-- Python code -->
     <py-script>
         <!-- from js import tg, user_info
         print(f"User data = {user_info}") -->
-        ls = 10
-
-        print(f"User data {ls}")
-
-
     </py-script>
   </body>
 </html>
