--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     
     <!-- Python code -->
     <py-script>
-        <!-- from js import tg, user_info
-        print(f"User data = {user_info}") -->
+        from js import tg, user_info
+        print(f"User data = {user_info}")
     </py-script>
   </body>
 </html>
