--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
     <!-- Site body -->
-    <h1>hi</h1>
+    <h1>hi BITCH</h1>
     <!-- Javascript code -->
     <script>
         tg = window.Telegram.WebApp;
@@ -26,7 +26,7 @@
     <!-- Python code -->
     <py-script>
         from js import tg, user_info
-        print(f"User data = {user_info}")
+        <!-- print(f"User data = {user_info}") -->
     </py-script>
   </body>
 </html>
