--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <!-- Python code -->
     <py-script>
         from js import tg, user_info
-        <!-- print(f"User data = {user_info}") -->
+        def print_user_info(user_info):
+          print(f"User data = {user_info}")
+        print_user_info(user_info)
     </py-script>
   </body>
 </html>
