--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
   </head>
 
   <body>
-    <div id="test">
-      <h1>hi BITCH</h1>
-    </div>
 
     <a href="#" class="relative block overflow-hidden rounded-lg border border-gray-100 p-4 sm:p-6 lg:p-8">
     <span
@@ -29,7 +26,7 @@
           Building a SaaS product as a software developer
         </h3>
 
-        <p class="mt-1 text-xs font-medium text-gray-600" id="test">By John Doe</p>
+        <p class="mt-1 text-xs font-medium text-gray-600" id="test"></p>
       </div>
 
       <div class="hidden sm:block sm:shrink-0">
