--- a/index.html
+++ b/index.html
@@ -14,86 +14,70 @@
   </head>
 
   <body>
-    <div class="max-w-md mx-auto p-6 bg-white rounded-lg shadow-md">
-      <h2 class="text-2xl font-semibold mb-4">Добавить объявление<h2 id="userinfo" class="text-2xl font-semibold mb-4"></h2></h2>
-      <form>
-          <div class="mb-4">
-              <label class="block text-gray-700 font-semibold mb-2">Тип работы</label>
-              <select id="animals" class="w-full block px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm w-52 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="animals">
-                <option value="">
-                    Выберите  какую работу вы ищете
-                </option>
-                <option value="dog">
-                    Постоянная работа
-                </option>
-                <option value="cat">
-                    Временная работа
-                </option>
-            </select>
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2">Тип Город</label>
-            <select id="animals" class="w-full block px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm w-52 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="animals">
-              <option value="">
-                  Выберите город
-              </option>
-              <option value="dog">
-                  Казань
-              </option>
-              <option value="cat">
-                  Москва
-              </option>
-          </select>
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2">Тип работы</label>
-            <select id="animals" class="w-full block px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm w-52 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="animals">
-              <option value="">
-                  Выберите категорию работ
-              </option>
-              <option value="dog">
-                  Штукатурщик
-              </option>
-              <option value="cat">
-                  Художник
-              </option>
-          </select>
-          </div>
-          <div class="mb-4">
-              <label class="block text-gray-700 font-semibold mb-2">Ваше имя:</label>
-              <input type="text" id="input-label-with-helper-text" class="block p-2.5 w-full text-sm text-gray-900 bg-white-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ваше Имя" aria-describedby="hs-input-helper-text">
+    <div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
+      <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
+        <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+      </div>
+      <!-- Главная надпись -->
+      <div class="mx-auto max-w-2xl text-center">
+        <h2 id="hello" class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Заполните объявление</h2>
+      </div>
+      <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
+        <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
 
-          </div>
-          <div class="mb-4">
-            <label class="block text-gray-700 font-semibold mb-2">Описание объявления:</label>
-            <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-white-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Расскажите о себе"></textarea>
-          </div>
-          <div class="mb-4 flex items-center">
-            <div class="w-full">
-              <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Укажите оплату за работу:</label>
-              <div class="relative mt-2 rounded-md shadow-sm">
-                <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3 w-full">
-                  <span class="text-gray-500 sm:text-sm">₽</span>
-                </div>
-                <input type="text" name="price" id="price" class="block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="50000">
-                <div class="absolute inset-y-0 right-0 flex items-center">
-                  <label for="currency" class="sr-only">Currency</label>
-                  <select id="currency" name="currency" class="h-full rounded-md border-0 bg-transparent py-0 pl-2 pr-7 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
-                    <option>В месяц</option>
-                    <option>В день</option>
-                  </select>
-                </div>
+          <div class="sm:col-span-2">
+            <label for="price" class="block text-sm font-medium leading-6 text-gray-900">Оплата за работу:</label>
+            <div class="relative mt-2 rounded-md shadow-sm">
+              <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
+                <span class="text-gray-500 sm:text-sm">₽</span>
+              </div>
+              <input type="text" name="price" id="price" class="w-full block w-full rounded-md border-0 py-1.5 pl-7 pr-20 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="0.00">
+              <div class="absolute inset-y-0 right-0 flex items-center">
+                <label for="currency" class="sr-only">Currency</label>
+                <select id="currency" name="currency" class="h-full rounded-md border-0 bg-transparent py-0 pl-2 pr-7 text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm">
+                  <option>В месяц</option>
+                  <option>В день</option>
+                  <option>В час</option>
+                </select>
               </div>
             </div>
           </div>
-          <div class="mb-4">
-              <label class="block text-gray-700 font-semibold mb-2">Оставьте ваш номер</label>
-              <input type="tel" class="block p-2.5 w-full text-sm text-gray-900 bg-white-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Пример: 71234567890">
 
+          <!-- Блок ФИО -->
+          <div class="sm:col-span-2">
+            <label for="company" class="block text-sm font-semibold leading-6 text-gray-900">Введите ваше имя:</label>
+            <div class="mt-2.5">
+              <input type="text" name="company" id="company" autocomplete="organization" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+            </div>
           </div>
-          <button type="submit" class="bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-600">Добавить объявление</button>
+
+          <!-- Блок о себе -->
+          <div class="sm:col-span-2">
+            <label for="message" class="block text-sm font-semibold leading-6 text-gray-900">Напишите подробнее о себе:</label>
+            <div class="mt-2.5">
+              <textarea name="message" id="message" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
+            </div>
+          </div>
+          <div class="flex gap-x-4 sm:col-span-2">
+            <div class="flex h-6 items-center">
+              <!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
+              <button type="button" class="bg-gray-200 flex w-8 flex-none cursor-pointer rounded-full p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" role="switch" aria-checked="false" aria-labelledby="switch-1-label">
+                <span class="sr-only">Agree to policies</span>
+                <!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
+                <span aria-hidden="true" class="translate-x-0 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
+              </button>
+            </div>
+            <label class="text-sm leading-6 text-gray-600" id="switch-1-label">
+              By selecting this, you agree to our
+              <a href="#" class="font-semibold text-indigo-600">privacy&nbsp;policy</a>.
+            </label>
+          </div>
+        </div>
+        <div class="mt-10">
+          <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Let's talk</button>
+        </div>
       </form>
-  </div>
+    </div>
 
 
 
@@ -105,13 +89,13 @@
     <script>
         tg = window.Telegram.WebApp;
         user_id = tg.initDataUnsafe.user.id;
-        user_firstname = tg.initDataUnsafe.user.user_firstname;
+        user_firstname = tg.initDataUnsafe.user.first_name;
         username = tg.initDataUnsafe.user.username;
     </script>
     <!-- Python code -->
     <py-script>
         from js import tg, user_id, user_firstname, username
-        display(f"{user_firstname} - {username} ({user_id})", target="userinfo")
+        display(f"{user_firstname}! Заполните объявление!", target="hello")
 
 
     </py-script>
