--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <!-- Главная надпись -->
       <div class="mx-auto max-w-2xl text-center">
-        <h2 id="hello" class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Заполните объявление</h2>
+        <h2 id="hello" class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl"></h2>
       </div>
       <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
         <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
@@ -58,39 +58,33 @@
               <textarea name="message" id="message" rows="4" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></textarea>
             </div>
           </div>
-          <div class="flex gap-x-4 sm:col-span-2">
-            <div class="flex h-6 items-center">
-              <!-- Enabled: "bg-indigo-600", Not Enabled: "bg-gray-200" -->
-              <button type="button" class="bg-gray-200 flex w-8 flex-none cursor-pointer rounded-full p-px ring-1 ring-inset ring-gray-900/5 transition-colors duration-200 ease-in-out focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" role="switch" aria-checked="false" aria-labelledby="switch-1-label">
-                <span class="sr-only">Agree to policies</span>
-                <!-- Enabled: "translate-x-3.5", Not Enabled: "translate-x-0" -->
-                <span aria-hidden="true" class="translate-x-0 h-4 w-4 transform rounded-full bg-white shadow-sm ring-1 ring-gray-900/5 transition duration-200 ease-in-out"></span>
-              </button>
-            </div>
-            <label class="text-sm leading-6 text-gray-600" id="switch-1-label">
-              By selecting this, you agree to our
-              <a href="#" class="font-semibold text-indigo-600">privacy&nbsp;policy</a>.
-            </label>
-          </div>
         </div>
         <div class="mt-10">
-          <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Let's talk</button>
+          <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Добавить объявление</button>
         </div>
       </form>
     </div>
 
 
-
-
-
-
-    
     <!-- Javascript code -->
     <script>
         tg = window.Telegram.WebApp;
         user_id = tg.initDataUnsafe.user.id;
         user_firstname = tg.initDataUnsafe.user.first_name;
         username = tg.initDataUnsafe.user.username;
+
+
+        // Получаем ссылку на поле ввода по его ID
+        const inputField = document.getElementById('inputField');
+
+        // Добавляем обработчик событий для клика в любом месте страницы
+        document.addEventListener('click', function(event) {
+          // Проверяем, что клик не произошел внутри поля ввода
+          if (event.target !== inputField) {
+            // Закрываем клавиатуру, убрав фокус с поля ввода
+            inputField.blur();
+          }
+        });
     </script>
     <!-- Python code -->
     <py-script>
